tests/agl/rejections/type/case_expr_branch_types.agl
enum R
  | Pass
  | Fail(issues: list[text])
let r: R = Pass
let x = case r of
  | Pass => 1
  | Fail(issues) => "many"
x
